# docu-forge-app

./: .gitignore  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: copy_binary.ps1
src/: App.tsx  globals.css  main.tsx  routeTree.gen.ts
src-backend/: .gitignore  main.py  pyproject.toml  python_backend.spec  run.py
src-backend/services/: service.py
src-backend/websockets_events/: websocket.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/internal/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  _zoneinfo.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  sidecard.rs  updater.rs
src-tauri/src/constants/: constants.rs
src/@components/: DropZone.tsx  DropZoneInput.tsx  FileButtonInput.tsx  FileInput.tsx  FolderButton.tsx  FolderInput.tsx
src/@config/: envs.ts
src/@lib/axios/: api.ts  config.ts
src/@providers/: AppStateProvider.tsx  Providers.tsx
src/@stores/: app.store.ts
src/@utils/: callPython.ts  extractFileNameFromPath.ts  formatDisplayPath.ts  parseNumberToColumn.ts
src/components/: DropZone.tsx  FolderButton.tsx
src/providers/: AppStateProvider.tsx  Providers.tsx
src/routes/: __root.tsx  index.tsx
src/screens/: FileSelection.tsx
(+41 files in other folders)
