[project]
name = "src-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyinstaller>=6.18.0",
    "sanic>=25.12.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
